# Piper-Grasper

./: README.md  pyproject.toml
assets/: .asset_hash  config.yaml  workDesk_v1.usd
assets/Props/: instanceable_meshes.usd
assets/piper_description/meshes/: gripper_base_100.dae  gripper_base_100_v2.dae
assets/piper_description/mujoco_model/: piper_description.xml  piper_no_gripper_description.xml
assets/piper_description/rviz/: piper_ctrl.rviz  piper_no_gripper.rviz
assets/piper_description/urdf/: piper_description.csv  piper_description.urdf  piper_description.xacro  piper_description_gazebo.xacro  piper_description_left.xacro  piper_description_old.urdf  piper_description_right.xacro  piper_description_v100.urdf  piper_description_v100_camera.urdf  piper_description_v200.urdf  piper_description_with_camera.xacro  piper_description_with_camera_left.xacro  piper_description_with_camera_right.xacro  (+5 more)
assets/workDesk_v1/: .asset_hash  config.yaml  desk_surface.stl  desk_surface.usda  frame.stl  frame.usda  legs.stl  legs.usda  workDesk_v1.stl
scripts/: arm_articulation.py  franka_pick_and_place.py  ik_demo.py  list_envs.py  manager_based.py  object_detection_and_pick.py  piper_differential_ik.py  piper_pick_and_place.py  random_agent.py  two_arms_stacking_cube.py  zero_agent.py
scripts/rl_games/: play.py  train.py
scripts/rsl_rl/: play.py  train.py
scripts/sb3/: play.py  train.py
scripts/skrl/: play.py  train.py
source/Piper_Grasper/: setup.py
src/desk/: desk_cfg.py
src/piper_grasper/: __init__.py
src/robot/: piper_cfg.py
(+51 files in other folders)
