[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "piper_grasper"
version = "0.1.0"
description = "Simulation and control package for the Piper Grasper robot"
authors = [{name="Zi Tao Li", email="dylanlzt2003@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]
